--- a/WarProject/src/warproject/TelaOpcoes.form
+++ b/WarProject/src/warproject/TelaOpcoes.form
@@ -39,20 +39,23 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jButton5" min="-2" pref="236" max="-2" attributes="0"/>
-                      <Component id="jButton4" min="-2" pref="236" max="-2" attributes="0"/>
-                      <Component id="jButton3" min="-2" pref="236" max="-2" attributes="0"/>
-                      <Component id="jButton2" min="-2" pref="236" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="236" max="-2" attributes="0"/>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jLabel1" min="-2" pref="236" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="jButton5" min="-2" pref="236" max="-2" attributes="0"/>
+                              <Component id="jButton4" min="-2" pref="236" max="-2" attributes="0"/>
+                              <Component id="jButton3" min="-2" pref="236" max="-2" attributes="0"/>
+                              <Component id="jButton2" min="-2" pref="236" max="-2" attributes="0"/>
+                              <Component id="jButton1" min="-2" pref="236" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
                   </Group>
                   <EmptySpace pref="76" max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -97,17 +100,11 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Cr&#xe9;ditos"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton4">
           <Properties>
             <Property name="text" type="java.lang.String" value="Sair"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton5">
           <Properties>
@@ -123,7 +120,7 @@
               <Font name="Dialog" size="24" style="1"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="WAR IMP&#xc9;RIO ROMANO"/>
+            <Property name="text" type="java.lang.String" value="WAR BRASIL"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
         </Component>
