--- a/WarProject/src/warproject/TelaDeJogo.form
+++ b/WarProject/src/warproject/TelaDeJogo.form
@@ -394,6 +394,7 @@
                                       </Group>
                                       <EmptySpace min="0" pref="147" max="32767" attributes="0"/>
                                   </Group>
+                                  <EmptySpace min="0" pref="78" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
