--- a/WarProject/src/warproject/TelaDeJogo.form
+++ b/WarProject/src/warproject/TelaDeJogo.form
@@ -65,8 +65,15 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="console" min="-2" max="-2" attributes="0"/>
-                          <Component id="jScrollPane1" min="-2" pref="659" max="-2" attributes="0"/>
+                          <Component id="console" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="jScrollPane1" min="-2" pref="452" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="lblAtual" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jTextField1" min="-2" pref="226" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="painelOpcoes" min="-2" pref="411" max="-2" attributes="0"/>
@@ -82,7 +89,14 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="console" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
-                              <Component id="jScrollPane1" min="-2" pref="150" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jScrollPane1" min="-2" pref="150" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Component id="lblAtual" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
                           </Group>
                           <Component id="painelOpcoes" min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -724,6 +738,17 @@
                 </Container>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JLabel" name="lblAtual">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Jogador Atual:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="jTextField1">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+                <Property name="text" type="java.lang.String" value="Max Pereira. COR VERMELHA"/>
+              </Properties>
+            </Component>
           </SubComponents>
         </Container>
         <Component class="javax.swing.JButton" name="btnTaurica">
